2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check clang_Cursor_getArgument() since it's missing in earlier libclang versions
	* configure: Regenerate
	* ChangeLog: Reformat a few inconsistencies

2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKOutgoingProxy.m: Implement -handleDBusMessage: on the outgoing proxy.

2013-05-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Replace deprecated self->isa access with object_getClass()
	* Documentation/Introduction.texi: Fix typo

2012-11-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Replace incorrect NSDebugMLog with NSDebugFLog.
	Reported by Philippe Roussell.

2012-09-23 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKNotificationCenter.m:
	Deal with clang warning about casting SEL to uintptr_t.

2012-08-22 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for libclang.
	* configure: Regenerate.
	* Documentation/install.texi: Document optional libclang
	requirement.
	* INSTALL: Regenerate
	* Source/config.h.in: Macro for libclang check.
	* Source/DKBoxingUtils.h
	* Source/DKBoxingUtils.m:
	Add D-Bus type derivation based on libclang. Fix potential index out of
	bounds bug in selector name mangling.
	* Source/DKArgument.h
	* Source/DKArgument.m:
	Add methods for generating arguments from CXTypes.
	* Source/DKMethod.h
	* Source/DKMethod.m:
	Add methods for generating methods from CXCursors.
	* Source/DKInterface.h
	* Source/DKInterface.m:
	Add methods for generating interfaces by runtime-inspecting protocols 
	or classes.
	* Source/GNUmakefile: Explicitly link Objective-C and Foundation libs.
	* Tests/TestDKInterface.m:
	Tests for interface generation from introspection data.

	Further work on introspection data generation.

2012-08-18 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKMethod.m:
	Fix typos.

2012-08-17 Niels Grewe <niels.grewe@halbordnung.de>